--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -11,20 +11,22 @@
         
         Hoy en día existen museos líderes en el tema de interacción con el público, como es el caso de los museos Digital Art Museum TeamLab Borderless de Japón y el Atelier de Lumieres de Francia. El primero de estos es un espacio que posee 10 mil metros cuadrados de proyección 3D, acompañados de juegos de luces y efectos especiales que llevan a los visitantes en medio de paisajes surrealistas. El segundo museo realiza macro proyecciones 360° de las obras más importantes de artistas como Van Gogh, Picasso, Chagall, entre otros. \cite{museoInterSalaLimpia}.\\
 
-        En Maloka \footnote{Maloka es un museo interactivo que fomenta la pasión por el aprendizaje a partir de los lazos entre ciencia, tecnología, innovación y sociedad.}, Bogotá, las exhibiciones ponen a prueba los 5 sentidos de los visitantes, haciendo que tanto niños, como adultos disfruten un tiempo en familia repleto de nuevos conocimientos, incluyendo recorridos por salas interactivas y funciones de proyección de cine. \cite{maloka}.\\
+        En Maloka \footnote{Maloka es un museo interactivo que fomenta la pasión por el aprendizaje a partir de los lazos entre ciencia, tecnología, innovación y sociedad.}, Bogotá, las exhibiciones ponen a prueba los 5 sentidos de los visitantes, haciendo que tanto niños, como adultos disfruten un tiempo en familia repleto de nuevos conocimientos, incluyendo recorridos por salas interactivas y funciones de proyección de cine. \cite{maloka}.
 
-        En el museo MUST en Lecce, Italia, se llevó a cabo la instalación de un dispositivo portátil que combina el reconocimiento de imágenes y las capacidades de localización para proporcionar automáticamente a los usuarios contenidos culturales relacionados con las obras de arte observadas. La información de localización se obtiene mediante una infraestructura Bluetooth Low Energy \footnote{Bluetooth Low Energy es una tecnología de red de área personal inalámbrica, diseñada y comercializada por Bluetooth SIG destinada a aplicaciones en el cuidado de la salud, fitness y beacons, seguridad y las industrias de entretenimiento en el hogar} instalada en el museo. Además, el sistema interactúa con la Nube para almacenar contenidos multimedia producidos por el usuario y compartir eventos generados por el entorno en sus redes sociales. Estos servicios interactúan con dispositivos físicos a través de un middleware multiprotocolo. \cite{museoItalia}.\\
+        En el museo MUST en Lecce, Italia, se llevó a cabo la instalación de un dispositivo portátil que combina el reconocimiento de imágenes y las capacidades de localización para proporcionar automáticamente a los usuarios contenidos culturales relacionados con las obras de arte observadas. La información de localización se obtiene mediante una infraestructura Bluetooth Low Energy \footnote{Bluetooth Low Energy es una tecnología de red de área personal inalámbrica, diseñada y comercializada por Bluetooth SIG destinada a aplicaciones en el cuidado de la salud, fitness y beacons, seguridad y las industrias de entretenimiento en el hogar} instalada en el museo. Además, el sistema interactúa con la Nube para almacenar contenidos multimedia producidos por el usuario y compartir eventos generados por el entorno en sus redes sociales. Estos servicios interactúan con dispositivos físicos a través de un middleware multiprotocolo. \cite{museoItalia}.
 
-        En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), dentro del mismo se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.\\
+        En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), dentro del mismo se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.
 
-        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.\\
+        En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
         
-        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE).\cite{proyectoIotdispositivoPortatil}. En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID (identificación por radiofrecuencia del inglés Radio Frequency Identification) pasivos. \cite{chinaSistemaSeguridadRFID}.\\
+        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE).\cite{proyectoIotdispositivoPortatil}. En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID (identificación por radiofrecuencia del inglés Radio Frequency Identification) pasivos. \cite{chinaSistemaSeguridadRFID}.
 
         La siguiente tabla resume lo anterior expuesto.
 
-        \begin{table}[h]
+        \begin{table}[h!]
             \centering
+            \caption{IoT Internacional}
+            \subcaption*{Fuente: Elaboración propia}
             \begin{tabular}{|l|l|l|}
                 \hline
                 \rowcolor[HTML]{9698ED} 
@@ -36,47 +38,45 @@
                 \begin{tabular}[c]{@{}l@{}}Obras de arte parlantes\\ equipadas con tableros de\\ sensores. Cada obra de arte\\ comparte su historia.\end{tabular}                     & \begin{tabular}[c]{@{}l@{}}Conjunto Monumental de San \\ Domenico Maggiore, Italia.\end{tabular} & \begin{tabular}[c]{@{}l@{}}(Chianese,\\ Piccialli, y Jung, 2016).\end{tabular}                   \\ \hline
                 \begin{tabular}[c]{@{}l@{}}Sistema para la conservación\\de las piezas en los museos\\en base a pruebas\\de contacto o movimiento,\\intensidad de la luz.\end{tabular}&Universidad de El Cairo, Egipto                                                                   & \begin{tabular}[c]{@{}l@{}}(Al-Habal\\y Khattab, 2019).\end{tabular}                             \\ \hline
             \end{tabular}
+            \label{tab:iotInternacional1}
         \end{table}
 
         \vspace{2cm}
 
-        \begin{table}[h]
+        \begin{table}[H]
             \centering
             \begin{tabular}{|lll|}
                 \hline
-                \multicolumn{3}{|c|}{Continuación Tabla \ref{tab: iotInternacional}}                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
+                \multicolumn{3}{|c|}{Continuación Tabla \ref{tab:iotInternacional1}}                                                                                                                                                                                                                                                                                                                                                                                    \\ \hline
                 \multicolumn{3}{|c|}{Proyectos}                                                                                                                                                                                                                                                                                                                                                                                                 \\ \hline
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Captura el movimiento del\\ usuario, procesamiento de\\ imágenes.\end{tabular}} & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}III Congreso Internacional de\\ Avances en Electricidad,\\ Electrónica, Información,\\ Comunicación y\\ Bioinformática en el año 2017\end{tabular}}                & \begin{tabular}[c]{@{}l@{}}(Sornalatha y \\ Kavitha, 2017).\end{tabular}  \\ \hline
                 \multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Propuesta de esquema\\ antirrobo para museos\\ basados en IoT.\end{tabular}}    & \multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Escuela de Ingeniería Electrónica,\\ Universidad de Jiujiang\\ y la Escuela de Ciencias de\\ la Computación, Universidad de\\ Wuhan, ambas de China.\end{tabular}} & \begin{tabular}[c]{@{}l@{}}(Liu, Wang, Qi, y Yang, \\ 2019).\end{tabular} \\ \hline
                 \end{tabular}
-            \caption{IoT Internacional}
-            \subcaption*{Fuente: Elaboración propia}
-            \label{tab: iotInternacional}
+            \label{tab:iotInternacional}
         \end{table}
                 
-        Como podemos observar en la tabla \ref{tab: iotInternacional} existen disímiles ejemplos de aplicación del Internet de las Cosas a nivel internacional; de ahí que haremos énfasis en la aplicación de sistemas de conservación de las piezas en los museos tomando como referencia los ejemplos anteriormente expuestos.
+    Como se observa en la tabla \ref{tab:iotInternacional1} existen disímiles ejemplos de aplicación del Internet de las Cosas a nivel internacional; de ahí que haremos énfasis en la aplicación de sistemas de conservación de las piezas en los museos tomando como referencia los ejemplos anteriormente expuestos.
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
-        En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
+
+    En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
         
-        Desde 2012 se venía proyectando una sala dedicada al libro cubano, con la cooperación de la Unión Europea y la Unesco. \cite{oficinaHistoriadorRescatepatrimonio}. Gracias a este Rescate Patrimonial y Desarrollo Cultural en La Habana, se propició la restauración del mismo para la creación del Centro. Esta iniciativa de cooperación internacional fue desarrollada por la Oficina del Historiador de la Ciudad de La Habana, con apoyo de la Unión Europea y de la Organización de Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO). \cite{potencialidadProyectoMuseologico}.\\
+    Desde 2012 se venía proyectando una sala dedicada al libro cubano, con la cooperación de la Unión Europea y la Unesco. \cite{oficinaHistoriadorRescatepatrimonio}. Gracias a este Rescate Patrimonial y Desarrollo Cultural en La Habana, se propició la restauración del mismo para la creación del Centro. Esta iniciativa de cooperación internacional fue desarrollada por la Oficina del Historiador de la Ciudad de La Habana, con apoyo de la Unión Europea y de la Organización de Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO). \cite{potencialidadProyectoMuseologico}.\\
         
-        El Centro cuenta con una sala monográfica que propone un audiovisual realizado por autores cubanos donde se relata la historia del inmueble donde está ubicada la institución. Además, de una sala introductoria que refleja la visión que se tenía antes del encuentro de las dos culturas con la llegada de Cristóbal Colón. Este relata en paralelo la historia de Cuba y de Europa interrelacionadas en un ambiente inmersivo y por fuera se puede recorrer desde la visión de las artes plásticas europeas y cubanas. Siempre están acompañados de cuatro audiovisuales que recorren líneas independientes como la historia de la esclavitud, la ciencia, los servicios públicos y la economía.\\
+    El Centro cuenta con una sala monográfica que propone un audiovisual realizado por autores cubanos donde se relata la historia del inmueble donde está ubicada la institución. Además, de una sala introductoria que refleja la visión que se tenía antes del encuentro de las dos culturas con la llegada de Cristóbal Colón. Este relata en paralelo la historia de Cuba y de Europa interrelacionadas en un ambiente inmersivo y por fuera se puede recorrer desde la visión de las artes plásticas europeas y cubanas. Siempre están acompañados de cuatro audiovisuales que recorren líneas independientes como la historia de la esclavitud, la ciencia, los servicios públicos y la economía.\\
         
-        Adosada a esta sala se encuentra la de llegada y migraciones donde en un espacio se reproduce una parte de un galeón, atractivo para el público pues puede sentirse una ligera «brisa de mar», una corriente de aire situada en la parte posterior del barco. Esto se complementa con dos pantallas y proyectores que permiten la visualización de un audiovisual que también habla de las llegadas de los aborígenes, los conquistadores; la migración forzada de los africanos y así sucesivamente con las diferentes olas migratorias que han formado la actual característica mestiza de nuestra identidad y nación.\\
+    Adosada a esta sala se encuentra la de llegada y migraciones donde en un espacio se reproduce una parte de un galeón, atractivo para el público pues puede sentirse una ligera «brisa de mar», una corriente de aire situada en la parte posterior del barco. Esto se complementa con dos pantallas y proyectores que permiten la visualización de un audiovisual que también habla de las llegadas de los aborígenes, los conquistadores; la migración forzada de los africanos y así sucesivamente con las diferentes olas migratorias que han formado la actual característica mestiza de nuestra identidad y nación.\\
         
-        La Sala de Viajeros se soporta en un software que despliega una galería de imágenes ya sea de cubanos relevantes de visita por Europa o de europeos de visita en Cuba. Mediante el uso de pantallas táctiles, el visitante puede interactuar con las imágenes de las personalidades, leer una síntesis biográfica e incluso escuchar muestras de audio.
+    La Sala de Viajeros se soporta en un software que despliega una galería de imágenes ya sea de cubanos relevantes de visita por Europa o de europeos de visita en Cuba. Mediante el uso de pantallas táctiles, el visitante puede interactuar con las imágenes de las personalidades, leer una síntesis biográfica e incluso escuchar muestras de audio.
     
         
     \section{Arquitectura IoT y sus principales capas}\label{sec:arquitecturas}
 
     No existe una única definición universalmente adoptada, estándar, de Arquitectura de IoT; diferentes propuestas han surgido durante su desarrollo. Se abarcan tecnologías de comunicación, dispositivos de cómputo, sensores y actuadores \cite{ioT_en_Cosas_de_salud}.
-
-
     
     La arquitectura de IoT es principalmente desarrollada por capas, dígase, la arquitectura de 3 capas, la arquitectura de 5 capas, la arquitectura de Nube, la arquitectura de niebla y la arquitectura de computación de Borde, solo por mencionar algunas \cite{arquitecturaIEEE}.\\
 
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=9cm, height=5cm]{imagenes/Comparacion-arquitecturas-1024x535}
         \caption{Comparación arquitecturas}
@@ -100,7 +100,7 @@
 
     \vspace{5cm}
 
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=15.6cm, height=9cm]{imagenes/capas.jpg}
         \caption{Modelos de arquitecturas IoT basados en capas}
@@ -108,8 +108,10 @@
         \label{imag:modelos_arquitecturas_iot}
     \end{figure}
 
-    \begin{table}[h]
+    \begin{table}[H]
         \centering
+        \caption{Referencias figura \ref{imag:modelos_arquitecturas_iot}}
+        \subcaption*{Fuente: Elaboración propia}
         \begin{tabular}{|l|l|}
         \hline
         \textbf{No. de Capas}    & \textbf{Referencias}                                                                                                                                              \\ \hline
@@ -121,16 +123,16 @@
         Basado en Middleware     & \cite{ref9}                                                                                                                                                \\ \hline
         6 capas                  & \cite{ref19}                                                                                                                                                        \\ \hline
         \end{tabular}
-        \caption{Referencias figura \ref{imag:modelos_arquitecturas_iot}}
-        \subcaption*{Fuente: Elaboración propia}
         \label{tab: referencias_capas}
     \end{table}
 
     \vspace{1cm}
 
     Desde el punto de vista de \cite{capasIoTciberseguridad} existen capas fundamentales dentro de la esctructura de IoT. En la tabla \ref{tab: capas_IoT} se detallan estas capas:
-    \begin{table}[h]
+    \begin{table}[H]
         \centering
+        \caption{Capas de IoT}
+        \subcaption*{Fuente: \cite{capasIoTciberseguridad}}
         \begin{tabular}{|l|l|}
         \hline
         \rowcolor[HTML]{9698ED} 
@@ -144,12 +146,8 @@
         Capa de seguridad                                                          & \begin{tabular}[c]{@{}l@{}}Cubre todos los aspectos de protección de toda la\\ arquitectura de IoT.\end{tabular}                                                             \\ \hline
         Capa de borde                                                              & \begin{tabular}[c]{@{}l@{}}Funciona en un bode o cerca de la recopilación\\ de información del dispositivo.\end{tabular}                                                     \\ \hline
         \end{tabular}
-        \caption{Capas de IoT}
-        \subcaption*{Fuente: \cite{capasIoTciberseguridad}}
         \label{tab: capas_IoT}
         \end{table}
-
-    \vspace{3cm}
 
     No obstante, según \cite{internetOfThingsStateOfTheArt}, dentro de las capas más importantes del IoT podemos encontrar:
 
@@ -174,7 +172,7 @@
 
     En la figura \ref{imag:vista_funcional_arquitectura_iot} se observan los diferentes módulos funcionales que componen las capas de la propuesta arquitectónica. La capa de percepción se encarga de la obtención de variables asociadas a la conservación de las piezas en la muestra (sensores-microcontroladores), la capa de transporte con el propósito de transportar la data recopilada por los sensores para su posterior procesamiento y análisis, la capa de procesamiento que genera predicciones y recomendaciones expuesta a cambios constantes de los valores que se reciben desde el comienzo del ciclo en la etapa de percepción y, la capa de aplicación, la cual permite a los usuarios finales visualizar en una interfaz y mediante el empleo de la RA (Realidad Aumentada), los datos y predicciones en dependencia de la información recopilada.\\
 
-    \begin{figure}[h]
+    \begin{figure}[H]
         \hspace{5cm}
         \includegraphics[width=9cm, height=4.4cm]{imagenes/myArquitecture2.jpg}
         \caption{Vista funcional de la arquitectura}
@@ -189,7 +187,7 @@
     así como la muestra del empleo de comunicaciones wifi y de RED en la capa de transporte y el concentrador RaspberryPi perteneciente a la capa de procesamiento donde se trabaja además, sobre la plataforma perteneciente al patrimonio universitario.
     En la figura \ref{imag:vista_implementacion_arquitectura_iot}, se observan las tecnologías empleadas en cada una de las capas propuestas en la arquitectura descrita.
     
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=8cm, height=5.4cm]{imagenes/vista de implementación.jpg}
         \caption{Vista de implementación}
@@ -202,7 +200,7 @@
     \subsection{Capa de percepción}\label{subsec:capa_percepcion}
     En esta capa es donde se ubican los microcontroladores encargados de comunicarse con los sensores interactuando directamente con el medio recolectando los datos.\\
     
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=10cm, height=5cm]{imagenes/perception_image.jpg}
         \caption{Diagrama funcional de captura de datos}
@@ -226,7 +224,7 @@
 
     En el gráfico que se muestra a continuación se relaciona el valor cuantitativo de las principales formas en las que se exponen las piezas dentro de estas salas:\newline
 
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=10cm, height=6cm]{imagenes/formas expositivas.jpg}
         \caption{Ubicación piezas}
@@ -246,8 +244,10 @@
 
     La siguiente tabla relaciona la variable a medir según la ubicación del nodo.
 
-    \begin{table}[h]
+    \begin{table}[H]
         \centering
+        \caption{Correlación de los nodos}
+        \subcaption*{Fuente: Elaboración propia}
         \begin{tabular}{|l|c|l|c|}
         \hline
         \rowcolor[HTML]{9698ED} 
@@ -267,8 +267,6 @@
         13                                                 &                                                                             &                                                                                             &                                                                                                                                  \\ \cline{1-1}
         14                                                 & \multirow{-4}{*}{\begin{tabular}[c]{@{}c@{}}Vitrinas\\ Sala 3\end{tabular}} & \multirow{-4}{*}{cerámica (barro), piedra}                                                          & \multirow{-4}{*}{\begin{tabular}[c]{@{}c@{}}temperatura, humedad,\\ luminosidad, vibraciones.\end{tabular}}                      \\ \hline
         \end{tabular}
-        \caption{Correlación de los nodos}
-        \subcaption*{Fuente: Elaboración propia}
         \label{tab:correlacion_nodos}
     \end{table}
 
@@ -320,7 +318,7 @@
     \section{Condiciones medioambientales...} \label{sec: condiciones_medioambientales}
 
 
-    \begin{figure}[h]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=16cm, height=5cm]{imagenes/gráfica_comparativa_variables_medioambientales.png}
         \caption{Correlación de valores medioambientales}
