--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -6,37 +6,44 @@
     \setcounter{page}{1} %Establece el contador de los numeros de las paginas 
     \pagestyle{plain} %Texto plano
 
-    El término Internet de las Cosas o IoT (Internet of Things, por sus siglas en inglés), fue utilizado por primera vez por Kevin Ashton en 1999 cuando estaba trabajando en el campo de la tecnología RFID en red (identificación por radiofrecuencia) y tecnologías de detección emergentes. Sin embargo, el IoT nació en algún momento entre 2008 y 2009. \cite{evolucionIoT}\\
+    El término Internet de las Cosas o IoT (Internet of Things, por sus siglas en inglés), fue utilizado por primera vez por Kevin Ashton en 1999 cuando estaba trabajando en el campo de la tecnología RFID en red (identificación por radiofrecuencia) y tecnologías de detección emergentes. Sin embargo, el IoT nació en algún momento entre 2008 y 2009 \cite{evolucionIoT}.
 
-    El IoT se trata de un concepto que se basa en la interconexión de los objetos con su entorno. Los objetos de esta nueva generación incorporan la capacidad de adquirir datos, comunicarse entre sí y activar comportamientos reactivos a las condiciones cambiantes del contexto \cite{agriculturaPrecision}. Este concepto pretende reflejar la profunda transformación y el radical cambio de paradigmas que está experimentando nuestra forma de vivir en hogares, ciudades y entornos de trabajo.\\
+    El IoT se trata de un concepto que se basa en la interconexión de los objetos con su entorno. Los objetos de esta nueva generación incorporan la capacidad de adquirir datos, comunicarse entre sí y activar comportamientos reactivos a las condiciones cambiantes del contexto \cite{agriculturaPrecision}. Este concepto pretende reflejar la profunda transformación y el radical cambio de paradigmas que está experimentando nuestra forma de vivir en hogares, ciudades y entornos de trabajo.
 
-    Nos encontramos ante un salto tecnológico que afecta directamente a cómo la humanidad se enfrenta a los retos. En definitiva, el IoT revolucionará la concepción que posee el ser humano acerca de su mundo y la forma de interaccionar con él. \cite{revolucionDefinitiva} \\
+    Nos encontramos ante un salto tecnológico que afecta directamente a cómo la humanidad se enfrenta a los retos. En definitiva, el IoT revolucionará la concepción que posee el ser humano acerca de su mundo y la forma de interaccionar con él \cite{revolucionDefinitiva}.
 
-    Las nuevas tecnologías que caracterizan el empleo del Internet de las Cosas permiten realizar entornos inteligentes reales capaces de proporcionar servicios avanzados a los usuarios. El objetivo es hacer que las cosas se comuniquen entre sí, establezcan comportamientos de acuerdo a patrones pre-fijados y, por consiguiente, sean más inteligentes e independientes.\\
-    
-    Recientemente, estos entornos inteligentes también se están explotando para renovar el interés de los usuarios por el patrimonio cultural, al garantizar experiencias culturales interactivas reales. Dentro de las instituciones de patrimonio cultural, las tecnologías en red tienen un enorme potencial para mejorar los esfuerzos de conservación, el aumento del acceso a los conocimientos contextuales y para reinventar la interacción de las personas con las obras culturales.\\
-    
-    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, el museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.\\ 
-    
-    La tercera de estas muestras, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales entre otras; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.\\
-    
+    Las nuevas tecnologías que caracterizan el empleo del Internet de las Cosas permiten realizar entornos inteligentes reales capaces de proporcionar servicios avanzados a los usuarios. El objetivo es hacer que las cosas se comuniquen entre sí, establezcan comportamientos de acuerdo a patrones pre-fijados y, por consiguiente, sean más inteligentes e independientes.
+
+    Recientemente, estos entornos inteligentes también se están explotando para renovar el interés de los usuarios por el patrimonio cultural, al garantizar experiencias culturales interactivas reales. Dentro de las instituciones de patrimonio cultural, las tecnologías en red tienen un enorme potencial para mejorar los esfuerzos de conservación, el aumento del acceso a los conocimientos contextuales y para reinventar la interacción de las personas con las obras culturales.
+
+    La Universidad de Oriente cuenta con tres muestras expositivas como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, el museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.
+
+    La tercera de estas muestras, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales entre otras; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.
+
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
 
-    Se asume como \textbf{problema de investigación:} la inexistencia de un sistema de monitoreo para el control del estado de conservación de las piezas en la muestra Prat Puig imposibilitando el control en tiempo real por parte de los especialistas; por lo que se definde entonces como \textbf{objeto de la investigación}, los sistemas de supervisión y monitoreo de piezas de arte basados en IoT.\\
+    En base a lo anterior descrito se asume como \textbf{problema de la investigación} la inexistencia de un sistema de monitoreo de bajo consumo para el control en tiempo real del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro.
+
+    \textbf{Objeto de la investigación: }sistemas de supervisión y monitoreo basado en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig”.
+
+    \textbf{Campo de acción: }sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en los museos.
+
+    \textbf{Objetivo: }diseñar e implementar de un sistema de arquitectura descentralizada basado en IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la muestra “Prat Puig”.
+
+    \newpage
     
-    \textbf{Campo de acción:} Diseño e implementación de sistemas basados en el empleo del Internet de las Cosas en los museos. El \textbf{objetivo}...
-
-    \textbf{Hipótesis:} Si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la vigencia de estos objetos y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
-
     \textbf{Tareas de la investigación:}
     \begin{enumerate} %Para crear la lista
-        \item Analizar la trascendencia del Internet de las Cosas en los museos tanto internacionales como en los museos de Cuba.
-        \item Analizar las arquitecturas del Internet de las Cosas y la proposición de la arquitectura del proyecto.
-        \item Caracterizar los diferentes sensores a emplear acorde a las variables presentes.
+        \item Analizar la trascendencia del Internet de las Cosas en los museos internacionales y en los museos de Cuba.
+        \item Analizar las arquitecturas de los sistemas IoT.
+        \item Proponer una arquitectura IoT para el sistema.
+        \item Caracterizar los diferentes sensores y microcontrolador a emplear acorde a las variables presentes.
         \item Implementación de un sistema de supervisión y monitoreo basado en IoT.
     \end{enumerate}
 
-    \textbf{Aporte de la investigación: } un sistema de supervisión y monitoreo basado en IoT para el control del estado de conservación de los objetos de la muestra.\\
+    
+
+    \textbf{Aporte de la investigación: } un sistema de supervisión y monitoreo basado en IoT para el control del estado de conservación de los objetos de la muestra.
 
     \textbf{Organización del documento: }El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
